apps/overlays/huston/apps/ntfy/ntfy-ingress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: ntfy-ingress
  namespace: ntfy
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`ntfy.ovh.markaplay.net`) || Host(`ntfy.lab.markaplay.net`)
      kind: Rule
      services:
        - name: ntfy-svc
          kind: Service
          port: 80
  tls:
    secretName: ntfy-cert
